--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "fs": "0.0.2",
+    "google-auth-library": "^0.9.7",
     "googleapis": "^2.1.6",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
@@ -21,6 +23,7 @@
     "mongoose": "^4.2.7",
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readline": "^1.2.1"
   }
 }
