--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.8",
+    "angular-moment": "^0.10.3",
     "angular-route": "^1.4.8",
     "angular-ui-grid": "^3.0.7",
     "bcrypt": "^0.8.5",
@@ -22,6 +23,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-uglify": "^0.11.0",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.7",
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
