--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "path": "^0.12.7",
-    "readline": "^1.2.1"
+    "readline": "^1.2.1",
+    "request": "^2.67.0"
   }
 }
