--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^0.11.4",
     "angular-moment": "^0.10.3",
     "angular-route": "^1.4.8",
     "angular-ui-grid": "^3.0.7",
