--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-uglify": "^0.11.0",
+    "material-design-icons": "^2.1.1",
     "moment": "^2.10.6",
     "mongoose": "^4.2.7",
     "nodemon": "^1.8.1",
